--- a/School.Core/School.Core.csproj
+++ b/School.Core/School.Core.csproj
@@ -25,7 +25,7 @@
     <EmbeddedResource Update="Resources\SharedResources.AR.resx">
       <Generator>ResXFileCodeGenerator</Generator>
     </EmbeddedResource>
-    <EmbeddedResource Update="Resources\SharedResources.EN.resx">
+    <EmbeddedResource Update="Resources\SharedResources.en.resx">
       <Generator>ResXFileCodeGenerator</Generator>
     </EmbeddedResource>
   </ItemGroup>
