Add Create EndPoint In Identity

--- a/School.Core/School.Core.csproj
+++ b/School.Core/School.Core.csproj
@@ -30,4 +30,10 @@
     </EmbeddedResource>
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Features\ApplicationUser\Queries\Handler\" />
+    <Folder Include="Features\ApplicationUser\Queries\Models\" />
+    <Folder Include="Mapping\ApplicationUser\Queries\" />
+  </ItemGroup>
+
 </Project>
